# serializer version: 1
# name: TestElement.test_element_stats_postgres_queries_are_as_expected
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.1
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.2
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.3
  '''
  SELECT "markettor_instancesetting"."id",
         "markettor_instancesetting"."key",
         "markettor_instancesetting"."raw_value"
  FROM "markettor_instancesetting"
  WHERE "markettor_instancesetting"."key" = 'constance:markettor:RATE_LIMIT_ENABLED'
  ORDER BY "markettor_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestElement.test_element_stats_postgres_queries_are_as_expected.4
  '''
  SELECT "markettor_instancesetting"."id",
         "markettor_instancesetting"."key",
         "markettor_instancesetting"."raw_value"
  FROM "markettor_instancesetting"
  WHERE "markettor_instancesetting"."key" = 'constance:markettor:HEATMAP_SAMPLE_N'
  ORDER BY "markettor_instancesetting"."id" ASC
  LIMIT 1
  '''
# ---
